add gsuite sample

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "fathan.github.io",
-  "version": "1.0.0",
-  "description": "My epic Nuxt.js project",
+  "version": "2.0.0",
+  "description": "Personal profile Fathan Rohman, S.T | Fullstack Developer",
   "author": "Fathan Rohman",
   "private": true,
   "scripts": {
@@ -12,19 +12,18 @@
     "test": "jest"
   },
   "dependencies": {
-    "cross-env": "^5.2.0",
-    "nuxt": "^2.4.0",
-    "express": "^4.16.4",
-    "@nuxtjs/bulma": "^1.2.1",
     "@nuxtjs/axios": "^5.3.6",
-    "@nuxtjs/pwa": "^2.6.0"
+    "@nuxtjs/bulma": "^1.2.1",
+    "cross-env": "^5.2.0",
+    "express": "^4.16.4",
+    "nuxt": "^2.4.0"
   },
   "devDependencies": {
-    "nodemon": "^1.18.9",
     "@vue/test-utils": "^1.0.0-beta.27",
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "^24.1.0",
     "jest": "^24.1.0",
+    "nodemon": "^1.18.9",
     "vue-jest": "^3.0.3"
   }
 }
